Fix webpack setup

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=development babel-node server-dev.js",
+    "web": "NODE_ENV=development babel-node server-dev.js --target web",
+    "electron": "NODE_ENV=development electron ./application/app.js",
     "clean": "rm -rf build",
     "build": "npm run clean && NODE_ENV=production webpack -p --progress --profile --colors",
     "stagging": "npm run clean && NODE_ENV=development webpack -p --progress --profile --colors",
@@ -60,11 +62,14 @@
     "html-webpack-plugin": "^2.8.1",
     "iconutil": "^1.0.1",
     "imports-loader": "^0.6.5",
+    "minimist": "^1.2.0",
     "mocha": "^2.2.5",
     "nano-logger": "^1.0.0",
     "node-libs-browser": "^1.0.0",
+    "node-noop": "^1.0.0",
     "node-sass": "^3.2.0",
     "nodemon": "^1.9.2",
+    "offline-plugin": "^3.2.1",
     "postcss-loader": "^0.8.0",
     "progress-bar-webpack-plugin": "git+https://git@github.com/subtirelumihail/progress-bar-webpack-plugin.git",
     "react-hot-loader": "^1.2.8",
