--- a/application/package.json
+++ b/application/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=development electron ./app.js",
     "build-dev": "NODE_ENV=production electron ./app.js",
     "clean": "rm -rf build",
-    "build": "npm run clean && electron-packager ./ --platform=darwin --arch=x64 --out ./build --overwrite"
+    "build": "npm run clean && NODE_ENV=development electron-packager ./ --platform=darwin --arch=x64 --out ./build --overwrite"
   },
   "author": "Subtirelu Mihail",
   "license": "ISC",
